# Agentic-accountant-copilot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: AGENT_ROLES.md  ARCHITECTURE.md  CONTROLS_AND_POLICIES.md  CURRENT_WORKFLOW.md  DOCUMENT_INTAKE_PLAN.md  LOCAL_DATA.md  MAINTENANCE.md  MIGRATION_FROM_V2.md  PRODUCT_VISION.md  SCHEMAS.md
examples/: sample_engagement_state.json
scripts/: check_prepare_workpaper_job.sh  check_workpaper_quality.py  install_hermes_accounting_profiles.ps1  install_hermes_accounting_profiles.sh  run_prepare_workpaper_job_worker.sh  run_workpaper_engineer_check.sh  send_workpaper_telegram_message.py  start_prepare_workpaper_job.sh  watch_prepare_workpaper_job_telegram.sh  watch_workpaper_engineer.sh
tests/: test_accountant_review_ui.py  test_accountant_review_workbench.py  test_accounting_facts_by_document.py  test_bank_statement_facts.py  test_broker_trade_facts.py  test_cli_artifact_models_next.py  test_cli_control_loop_next.py  test_cli_current_surface.py  test_cli_export_audit_trail.py  test_cli_inspect_engagement.py  test_cli_next_build_queue.py  test_cli_next_kanban.py  test_cli_next_queue_v2.py  test_cli_orchestration_next.py  test_cli_review_exceptions.py  test_cli_review_gates_next.py  test_coa_mapping_roundtrip.py  test_coa_mapping_suggestions.py  test_distribution_tax_facts.py  test_document_inventory.py  test_internal_workflow_queue.py  test_invoice_facts.py  test_journal_decision_workflow.py  test_journal_proposals.py  test_outputs_and_ui_queue.py  test_prior_statement_coa_import.py  test_raw_inputs_ingestion.py  (+14 more)
(+55 files in other folders)
